--- a/css/style.css
+++ b/css/style.css
@@ -6205,7 +6205,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #1abc9c !important;
+  background-color: #616161 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -9849,13 +9849,32 @@ form .row:first-child .floating-label-form-group {
 }
 
 .texto{
-font-size: 25px;
+font-size: 20px;
+color: #424242;
 }
 
+.members > * {
+  margin-bottom: 20px;
+}
 .members img { 
   width: 200px;
-  height: 150px;
+  /* height: 150px; */
   border-radius: 50px;
+}
+
+.members info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: start;
+}
+
+.info > .social-medias {
+  margin-top: 50px;
+}
+
+.members .btn-social {
+  font-size: 2.5rem;
 }
 
 .info {
