--- a/css/style.css
+++ b/css/style.css
@@ -9853,35 +9853,24 @@ font-size: 20px;
 color: #424242;
 }
 
-.members > * {
-  margin-bottom: 20px;
+.members > .member {
+  margin-bottom: 100px;
 }
-.members img { 
-  width: 200px;
-  /* height: 150px; */
+
+.member img { 
+  width: 250px;
   border-radius: 50px;
 }
 
-.members info {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: start;
-}
-
-.info > .social-medias {
-  margin-top: 50px;
-}
-
-.members .btn-social {
+.member .btn-social {
   font-size: 2.5rem;
 }
 
-.info {
-  margin-left: 20px;
+.member > * {
+  margin-bottom: 10px;
 }
 
 .name {
-  font-size: 30px;
+  font-size: 1.8em;
   font-weight: bold;
 }
